updated the file
Contact form added

--- a/Shipping Agency Company/M2 Cargo Lt.HTML
+++ b/Shipping Agency Company/M2 Cargo Lt.HTML
@@ -224,6 +224,43 @@
           </div>
         </div>
         </div>
+    </section> 
+    <section>
+     <div class="contact-us">
+     <div class="contact-content">
+      <div class="contact-head">
+        <h3 class="contact-text">Contact Us</h3>
+        <hr>
+      </div>
+      <div class="contact-btn">
+        <a href="tel:+231"> 
+          <button class="contact-btn1">Call(231) 775-776-899</button>
+        </a>
+        <a href="tel:+231"> 
+          <button class="contact-btn2">Call(231) 775-776-899</button>
+        </a>
+      </div>
+     </div>
+     <div class="contact-form">
+      <div class="contact-form-text">
+        <p>Please fill out the form below and one of City Lion Cargo Staffs will contact you to find out how we 
+          can serve you.
+        </p>
+      </div>
+      <form action="">
+        <label for="name">Name: </label>
+        <input type="text" id="name" placeholder="username"><br>
+        <label for="email">Email: </label>
+        <input type="email" name="email" id="email" placeholder="Email" required><br>
+        <label for="phone">Phone: </label>
+        <input type="text" name="phone" id="phone" placeholder="+231-777-888-999" required> <br>
+        <label for="messega">Message</label>
+        <textarea name="messega" id="messega"></textarea>
+        <input type="submit" name="submit" id="submit" value="Send Request">
+
+      </form>
+     </div>
+     </div>
     </section>
 
    
