Updated the code
New feature

--- a/Shipping Agency Company/M2 Cargo Lt.HTML
+++ b/Shipping Agency Company/M2 Cargo Lt.HTML
@@ -240,6 +240,7 @@
           <button class="contact-btn2">Call(231) 775-776-899</button>
         </a>
       </div>
+      <p>or fill out the form</p>
      </div>
      <div class="contact-form">
       <div class="contact-form-text">
@@ -247,27 +248,32 @@
           can serve you.
         </p>
       </div>
-      <form action="http://localhost:3000/submit" method="post"> 
-        <label for="name">Name: </label>
-         <input type="text" id="name" name="name" placeholder="username" required><br>
+      <div class="form-container"> 
+        <form action="" method=""> 
+          <label for="name">Name: </label> 
+          <input type="text" id="name" name="name" placeholder="username" required><br> 
           <label for="email">Email: </label> 
-          <input type="email" name="email" id="email" placeholder="Email" required><br>
-            <label for="country-code">Country Code: </label> 
-              <select name="country-code" id="country-code">
-                <option value="+231">+231 (Liberia)</option> 
-                <option value="+1">+1 (USA)</option>
-                <option value="+44">+44 (UK)</option>
-                <option value="+91">+91 (India)</option>
-                <option value="+61">+61 (Australia)</option> 
-                <option value="+81">+81 (Japan)</option> 
-                <option value="+33">+33 (France)</option> 
-              </select>
-               <label for="phone-number">Phone Number:</label> 
-               <input type="tel" name="phone-number" id="phone-number" placeholder="777-888-999" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"><br>
-               <label for="message">Message:</label>
-               <textarea name="message" id="message" placeholder="Type your message here..." required></textarea><br> 
-               <input type="submit" name="submit" id="submit" value="Send Request"> 
-       </form>
+          <input type="email" name="email" id="email" placeholder="Email" required><br> 
+          <label for="country-code">Country Code: </label>  <br>
+          <select name="country-code" id="country-code"> 
+            <option value="+231">+231 (Liberia)</option> 
+            <option value="+1">+1 (USA)</option> 
+            <option value="+44">+44 (UK)</option> 
+            <option value="+91">+91 (India)</option> 
+            <option value="+61">+61 (Australia)</option> 
+            <option value="+81">+81 (Japan)</option> 
+            <option value="+33">+33 (France)</option> 
+          </select><br> <label for="phone-number">Phone Number: </label> 
+          <input type="tel" name="phone-number" id="phone-number" placeholder="777-888-999" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"><br> 
+          <label for="message">Message: </label> 
+          <textarea name="message" id="message" placeholder="Type your message here..." required></textarea><br> 
+          <input type="submit" name="submit" id="submit" value="Send Request"> 
+        </form> 
+        <div id="result">
+          <a id="cals" href="tel"></a>
+        </div>
+        
+      </div>
      </div>
      </div>
     </section>
