--- a/Shipping Agency Company/M2 Cargo Lt.HTML
+++ b/Shipping Agency Company/M2 Cargo Lt.HTML
@@ -227,20 +227,23 @@
     </section> 
     <section>
      <div class="contact-us">
+      <h2 style="text-align: center;">Contact Us</h2>
      <div class="contact-content">
-      <div class="contact-head">
-        <h3 class="contact-text">Contact Us</h3>
-        <hr>
-      </div>
-      <div class="contact-btn">
-        <a href="tel:+231"> 
-          <button class="contact-btn1">Call(231) 775-776-899</button>
-        </a>
-        <a href="tel:+231"> 
-          <button class="contact-btn2">Call(231) 775-776-899</button>
-        </a>
-      </div>
-      <p>or fill out the form</p>
+      
+      <div class="container">
+        <div class="gallery">
+            <img id="largeImage" src="CompanyImage/CEO.png" alt="Product Image" onclick="openLightbox();">
+            <h1>CEO</h1>
+            <div class="thumbnails">
+                <img src="CompanyImage/Alfred-Sheriff--263x300.png" alt="Thumbnail 1" onclick="changeImage('nation-delivery.webp');">
+                <img src="CompanyImage/Leo-Sheriff--893x1024.png" alt="Thumbnail 2" onclick="changeImage('images/product2.jpg');">
+                <img src="CompanyImage/Kcali-1024x924.png" alt="Thumbnail 3" onclick="changeImage('images/product3.jpg');">
+            </div>
+        </div>
+      
+    </div>
+
+
      </div>
      <div class="contact-form">
       <div class="contact-form-text">
@@ -250,11 +253,11 @@
       </div>
       <div class="form-container"> 
         <form action="" method=""> 
-          <label for="name">Name: </label> 
-          <input type="text" id="name" name="name" placeholder="username" required><br> 
-          <label for="email">Email: </label> 
+          <!-- <label for="name">Name: </label>  -->
+          <input type="text" id="name" name="name" placeholder="username" required> 
+          <!-- <label for="email">Email: </label>  -->
           <input type="email" name="email" id="email" placeholder="Email" required><br> 
-          <label for="country-code">Country Code: </label>  <br>
+          <!-- <label for="country-code">Country Code: </label>  <br> --> <br>
           <select name="country-code" id="country-code"> 
             <option value="+231">+231 (Liberia)</option> 
             <option value="+1">+1 (USA)</option> 
@@ -263,9 +266,10 @@
             <option value="+61">+61 (Australia)</option> 
             <option value="+81">+81 (Japan)</option> 
             <option value="+33">+33 (France)</option> 
-          </select><br> <label for="phone-number">Phone Number: </label> 
+          </select> <br>
+          <!-- <label for="phone-number">Phone Number: </label>  -->
           <input type="tel" name="phone-number" id="phone-number" placeholder="777-888-999" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"><br> 
-          <label for="message">Message: </label> 
+          <!-- <label for="message">Message: </label>  --> <br>
           <textarea name="message" id="message" placeholder="Type your message here..." required></textarea><br> 
           <input type="submit" name="submit" id="submit" value="Send Request"> 
         </form> 
