--- a/Shipping Agency Company/M2 Cargo Lt.HTML
+++ b/Shipping Agency Company/M2 Cargo Lt.HTML
@@ -247,9 +247,9 @@
      </div>
      <div class="contact-form">
       <div class="contact-form-text">
-        <p>Please fill out the form below and one of City Lion Cargo Staffs will contact you to find out how we 
+        <em>Please fill out the form below and one of City Lion Cargo Staffs will contact you to find out how we 
           can serve you.
-        </p>
+        </em>
       </div>
       <div class="form-container"> 
         <form action="" method=""> 
@@ -259,6 +259,7 @@
           <input type="email" name="email" id="email" placeholder="Email" required><br> 
           <!-- <label for="country-code">Country Code: </label>  <br> --> <br>
           <select name="country-code" id="country-code"> 
+            <option value="+231">Country-code</option> 
             <option value="+231">+231 (Liberia)</option> 
             <option value="+1">+1 (USA)</option> 
             <option value="+44">+44 (UK)</option> 
