Updated the code
User interfaces

--- a/Shipping Agency Company/M2 Cargo Lt.HTML
+++ b/Shipping Agency Company/M2 Cargo Lt.HTML
@@ -45,7 +45,7 @@
             <p>Welcome to our shipping agency, where we simplify the
               logistics of your business</p>
               <div class="head-btn">
-                <button class="booked"><a href="#contact">Book Now</a></button>
+                <button class="booked"><a href="#contact">Contact Us</a></button>
               </div>
           </div>
           <div class="head-img">
@@ -108,7 +108,7 @@
             <h1>City Lion-Cargo <br> Solutions.</h1>
             <p>At our shipping agency, we pride ourselves on <br> providing exceptional service and delivering your goods efficiently</p>
               <div class="about-btn">
-                <button class="Explore-More"><a href="#service">Explore More</a></button>
+                <button class="Explore-More"><a class="Explore-a" href="#service">Explore More <img class="Explore-img" src="CompanyImage/icons8-arrow-50.png" alt="Explore Arrow Icon" width="40px"></a></button>
               </div>
           </div>
         </div>
